--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,2 +1,2 @@
 node_modules/
-clean-skincare-app-firebase-adminsdk-fbsvc-6ea8ccd935.json
+clean-skincare-app-firebase-adminsdk-fbsvc-6ea8ccd935.jsonnode_modules/
