--- a/api/package.json
+++ b/api/package.json
@@ -5,5 +5,8 @@
     "csvtojson": "^2.0.10",
     "express": "^4.21.2",
     "firebase-admin": "^13.0.2"
+  },
+  "scripts": {
+    "dev": "node server.js"
   }
 }
