Add sensitive file to .gitignore

--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,2 +1,3 @@
 node_modules/
 clean-skincare-app-firebase-adminsdk-fbsvc-6ea8ccd935.jsonnode_modules/
+api/clean-skincare-app-firebase-adminsdk-fbsvc-6ea8ccd935.json
