organized set up folder

--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,3 +1,2 @@
 node_modules/
-clean-skincare-app-firebase-adminsdk-fbsvc-6ea8ccd935.jsonnode_modules/
-api/clean-skincare-app-firebase-adminsdk-fbsvc-6ea8ccd935.json
+config.json
