--- a/skincare-frontend/my-heroui-app/package.json
+++ b/skincare-frontend/my-heroui-app/package.json
@@ -26,10 +26,11 @@
     "@react-types/shared": "3.26.0",
     "axios": "^1.7.9",
     "clsx": "2.1.1",
+    "firebase": "^11.2.0",
     "framer-motion": "11.15.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "6.23.0",
+    "react-router-dom": "^6.23.0",
     "tailwind-variants": "0.1.20",
     "tailwindcss": "3.4.16"
   },
