--- a/skincare-frontend/my-heroui-app/package.json
+++ b/skincare-frontend/my-heroui-app/package.json
@@ -57,5 +57,6 @@
     "typescript": "5.6.3",
     "vite": "^5.2.0",
     "vite-tsconfig-paths": "^4.3.2"
-  }
+  },
+  "homepage": "/my-heroui-app"
 }
