--- a/skincare-frontend/my-heroui-app/package.json
+++ b/skincare-frontend/my-heroui-app/package.json
@@ -21,7 +21,7 @@
     "@heroui/snippet": "2.2.10",
     "@heroui/switch": "2.2.8",
     "@heroui/system": "2.4.6",
-    "@heroui/theme": "2.4.5",
+    "@heroui/theme": "^2.4.5",
     "@react-aria/visually-hidden": "3.8.12",
     "@react-types/shared": "3.26.0",
     "axios": "^1.7.9",
@@ -31,8 +31,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "^6.23.0",
-    "tailwind-variants": "0.1.20",
-    "tailwindcss": "3.4.16"
+    "tailwind-variants": "0.1.20"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
@@ -42,7 +41,7 @@
     "@typescript-eslint/eslint-plugin": "8.11.0",
     "@typescript-eslint/parser": "8.11.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "10.4.19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "^2.26.0",
@@ -52,8 +51,9 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "4.1.4",
-    "postcss": "8.4.38",
+    "postcss": "^8.5.1",
     "prettier": "3.3.3",
+    "tailwindcss": "^4.0.1",
     "typescript": "5.6.3",
     "vite": "^5.2.0",
     "vite-tsconfig-paths": "^4.3.2"
