--- a/api/package.json
+++ b/api/package.json
@@ -5,9 +5,13 @@
     "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "express": "^4.21.2",
-    "firebase-admin": "^13.0.2"
+    "firebase-admin": "^13.0.2",
+    "glob": "^11.0.1",
+    "uuid": "^11.0.5"
   },
+  "main": "index.js",
   "scripts": {
-    "dev": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node api/index.js"
   }
 }
