--- a/my-vite-app/package.json
+++ b/my-vite-app/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/roboto": "^5.1.1",
+    "@heroicons/react": "^2.2.0",
+    "@heroui/react": "^2.6.14",
+    "@mui/styled-engine-sc": "^6.4.3",
+    "@tailwindcss/vite": "^4.0.3",
     "firebase": "^11.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
