--- a/my-vite-app/package.json
+++ b/my-vite-app/package.json
@@ -15,11 +15,16 @@
     "@heroui/react": "^2.6.14",
     "@mui/styled-engine-sc": "^6.4.3",
     "@tailwindcss/vite": "^4.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^11.2.0",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
