--- a/my-vite-app/package.json
+++ b/my-vite-app/package.json
@@ -14,6 +14,8 @@
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.6.14",
     "@mui/styled-engine-sc": "^6.4.3",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -21,6 +23,7 @@
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.1",
