--- a/my-vite-app/package.json
+++ b/my-vite-app/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^6.4.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.3",
     "class-variance-authority": "^0.7.1",
